# lisa_project

./: .gitignore  Doxyfile  README.md  lisa_project.sln
lisa_project/: BaseController.cpp  BaseController.h  ButtonID.h  CMakeLists.txt  CalibrationData.cpp  CalibrationData.h  CalibrationStartEvent.h  CameraConfig.cpp  CameraConfig.h  CameraSettings.h  CameraSettingsController.cpp  CameraSettingsController.h  CameraSettingsDialog.cpp  CameraSettingsDialog.h  ErrorController.h  Event.h  EventBase.h  EventDispatcher.cpp  EventDispatcher.h  HomeFrame.cpp  HomeFrame.h  HomeFrameController.cpp  HomeFrameController.h  Image.h  ImageController.cpp  ImageController.h  Instrument.cpp  Instrument.h  InstrumentController.cpp  InstrumentController.h  InstrumentDto.cpp  InstrumentDto.h  InstrumentSelectedEvent.h  InstrumentSelectionDialog.cpp  InstrumentSelectionDialog.h  InstrumentSelectionEvent.h  Main.cpp  MenuID.h  Message.h  Mla.cpp  (+21 more)
lisa_project/calibration/algorithm_tests/: Rapport 11.02 - Algorithme de Calibration.ipynb  Rapport MLA Detection.ipynb  Untitled.ipynb
lisa_project/controller/: BaseController.cpp  BaseController.h  CalibrationController.cpp  CalibrationController.h  CalibrationEngine.cpp  CalibrationEngine.h  CameraSettingsController.cpp  CameraSettingsController.h  HomeFrameController.cpp  HomeFrameController.h  ImageController.cpp  ImageController.h  ImageProcessingController.cpp  ImageProcessingController.h  InstrumentController.cpp  InstrumentController.h  MlaController.cpp  MlaController.h  PreviewController.cpp  PreviewController.h
lisa_project/docs/html/: _base_controller_8cpp.html  _base_controller_8cpp__incl.map  _base_controller_8cpp__incl.md5  _base_controller_8cpp_source.html  _base_controller_8h.html  _base_controller_8h.js  _base_controller_8h__dep__incl.map  _base_controller_8h__dep__incl.md5  _base_controller_8h__incl.map  _base_controller_8h__incl.md5  _base_controller_8h_source.html  _button_i_d_8h.html  _button_i_d_8h.js  _button_i_d_8h__dep__incl.map  _button_i_d_8h__dep__incl.md5  _button_i_d_8h_source.html  _camera_config_8cpp.html  _camera_config_8cpp__incl.map  _camera_config_8cpp__incl.md5  _camera_config_8cpp_source.html  _camera_config_8h.html  _camera_config_8h.js  _camera_config_8h__dep__incl.map  _camera_config_8h__dep__incl.md5  _camera_config_8h__incl.map  _camera_config_8h__incl.md5  _camera_config_8h_source.html  _camera_settings_controller_8cpp.html  _camera_settings_controller_8cpp__incl.map  _camera_settings_controller_8cpp__incl.md5  _camera_settings_controller_8cpp_source.html  _camera_settings_controller_8h.html  _camera_settings_controller_8h.js  _camera_settings_controller_8h__dep__incl.map  _camera_settings_controller_8h__dep__incl.md5  _camera_settings_controller_8h__incl.map  _camera_settings_controller_8h__incl.md5  _camera_settings_controller_8h_source.html  _camera_settings_dialog_8cpp.html  _camera_settings_dialog_8cpp__incl.map  (+568 more)
lisa_project/docs/latex/: _camera_config_8h_source.tex  _event_8h_source.tex  _event_dispatcher_8h_source.tex  _home_frame_8h_source.tex  _home_frame_controller_8h_source.tex  _image_controller_8h_source.tex  _instrument_8h_source.tex  _instrument_controller_8h_source.tex  _instrument_selection_dialog_8h_source.tex  _menu_i_d_8h_source.tex  _message_8h_source.tex  _mla_8h_source.tex  _mla_controller_8h_source.tex  _mla_selection_dialog_8h_source.tex  _mla_settings_8h_source.tex  _my_app_8h_source.tex  _settings_8h_source.tex  annotated.tex  class_camera_config.tex  class_event_dispatcher.tex  class_home_frame.eps  class_home_frame.tex  class_home_frame_controller.tex  class_image_controller.tex  (+15 more)
lisa_project/event/: ExitEvent.h  OnLoadImageEvent.h
lisa_project/id/: ButtonID.h  MenuID.h
lisa_project/include/: BaseController.h  ButtonID.h  CalibrationController.h  CalibrationData.h  CalibrationDialog.h  CalibrationEngine.h  CalibrationParametersDto.h  CalibrationStartEvent.h  Event.h  EventBase.h  EventDispatcher.h  ExitEvent.h  HomeFrame.h  HomeFrameController.h  IApiService.h  ICalibrationViewListener.h  IHomeFrameListener.h  IInstrumentViewListener.h  IPreview.h  IPreviewListener.h  ImageController.h  Instrument.h  InstrumentController.h  InstrumentDto.h  InstrumentSelectedEvent.h  InstrumentSelectionDialog.h  InstrumentSelectionEvent.h  MenuID.h  Mla.h  MlaDto.h  MyApp.h  MyAppInterface.h  PreviewController.h  PreviewPanel.h  TestWfsApiService.h  WfsParameters.h  wfsApiService.h
lisa_project/interface/: IApiService.h  ICalibrationViewListener.h  IHomeFrameListener.h  IInstrumentViewListener.h  IPreview.h  IPreviewHolder.h  IPreviewHolderListener.h  IPreviewListener.h
lisa_project/model/: CalibrationData.cpp  CalibrationData.h  CameraConfig.cpp  CameraConfig.h  Instrument.cpp  Instrument.h  Mla.cpp  Mla.h  Settings.h
lisa_project/src/: BaseController.cpp  CalibrationController.cpp  CalibrationDialog.cpp  CalibrationEngine.cpp  CalibrationParametersDto.cpp  HomeFrame.cpp  HomeFrameController.cpp  ImageController.cpp  Instrument.cpp  InstrumentController.cpp  InstrumentDto.cpp  Mla.cpp  MyApp.cpp  PreviewController.cpp  PreviewPanel.cpp  TestWfsApiService.cpp  wfsApiService.cpp
lisa_project/thorlabs_api/: WFS.fp
lisa_project/view/: CalibrationDialog.cpp  CalibrationDialog.h  CameraSettingsDialog.cpp  CameraSettingsDialog.h  HomeFrame.cpp  HomeFrame.h  InstrumentSelectionDialog.cpp  InstrumentSelectionDialog.h  MlaSelectionDialog.cpp  MlaSelectionDialog.h  PreviewPanel.cpp  PreviewPanel.h
(+84 files in other folders)
